...
                    <nil key="textColor"/>
                    <nil key="highlightedColor"/>
                </label>
                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xea-QJ-sNG">
                    <rect key="frame" x="15" y="391" width="363" height="35"/>
                    <state key="normal" title="Button"/>
                    <buttonConfiguration key="configuration" style="plain" title="Play trailer" imagePadding="11" titleAlignment="center">
                        <imageReference key="image" image="play.fill" catalog="system" symbolScale="medium"/>
                        <backgroundConfiguration key="background">
                            <color key="backgroundColor" systemColor="systemRedColor"/>
                        </backgroundConfiguration>
                        <color key="baseForegroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                    </buttonConfiguration>
...
                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                </tableView>
                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qro-B0-Auj" userLabel="back button">
                    <rect key="frame" x="15" y="70" width="78" height="35"/>
                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                    <state key="normal" title="Button"/>
                    <buttonConfiguration key="configuration" style="plain" image="chevron.backward" catalog="system" title="Back">
                        <color key="baseForegroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                    </buttonConfiguration>
                    <connections>
                        <action selector="backButton:" destination="-1" eventType="touchUpInside" id="TsI-me-f8z"/>
                    </connections>
                </button>
...
